[gd_scene load_steps=42 format=2]

[ext_resource path="res://sprites/character/shadow.png" type="Texture" id=2]
[ext_resource path="res://sprites/character/character 2/mainCharacter2_sheet.png" type="Texture" id=9]
[ext_resource path="res://sprites/character/character 3/mainCharacter3_sheet.png" type="Texture" id=12]
[ext_resource path="res://shaders/outline.gdshader" type="Shader" id=18]
[ext_resource path="res://sprites/character/character 1/mainCharacter1_idle_walk-Sheet.png" type="Texture" id=19]
[ext_resource path="res://sprites/ui/select_your_character.png" type="Texture" id=20]
[ext_resource path="res://scenes/levels/character select.gd" type="Script" id=21]
[ext_resource path="res://scenes/levels/outline.gd" type="Script" id=22]

[sub_resource type="ShaderMaterial" id=42]
shader = ExtResource( 18 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/width = 0.0

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 19 )
region = Rect2( 0, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 19 )
region = Rect2( 55, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 19 )
region = Rect2( 110, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 19 )
region = Rect2( 165, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 19 )
region = Rect2( 220, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 19 )
region = Rect2( 275, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 19 )
region = Rect2( 330, 340, 55, 68 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 19 )
region = Rect2( 385, 340, 55, 68 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 19.8765, 35.3547 )

[sub_resource type="ShaderMaterial" id=43]
shader = ExtResource( 18 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/width = 0.0

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 55, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 110, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 165, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 220, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 275, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 330, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 385, 0, 55, 68 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 14.5851, 34.2964 )

[sub_resource type="ShaderMaterial" id=44]
shader = ExtResource( 18 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/width = 0.0

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 55, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 110, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 165, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 12 )
region = Rect2( 220, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 275, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 12 )
region = Rect2( 330, 0, 55, 68 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 12 )
region = Rect2( 385, 0, 55, 68 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 15.3788, 31.6508 )

[node name="character select" type="Node2D"]
script = ExtResource( 21 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="environment" type="YSort" parent="."]
position = Vector2( -100.296, -128.548 )
scale = Vector2( 2, 2 )

[node name="select_your_character" type="Sprite" parent="environment"]
position = Vector2( 206.574, 94.4813 )
scale = Vector2( 0.773915, 0.773915 )
z_index = 1
texture = ExtResource( 20 )

[node name="ColorRect" type="ColorRect" parent="environment"]
margin_left = 93.306
margin_top = 110.284
margin_right = 319.306
margin_bottom = 117.284
color = Color( 0, 0, 0, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character 1" type="Area2D" parent="environment"]
position = Vector2( 207.893, 165.612 )
script = ExtResource( 22 )

[node name="character 1" type="AnimatedSprite" parent="environment/character 1"]
material = SubResource( 42 )
z_index = 1
frames = SubResource( 23 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="environment/character 1"]
shape = SubResource( 45 )

[node name="character 2" type="Area2D" parent="environment"]
position = Vector2( 17.9336, -5.034 )
script = ExtResource( 22 )

[node name="character 2" type="AnimatedSprite" parent="environment/character 2"]
material = SubResource( 43 )
position = Vector2( 101.829, 170.255 )
z_index = 1
frames = SubResource( 32 )
frame = 3
playing = true

[node name="shadow" type="Sprite" parent="environment/character 2/character 2"]
position = Vector2( 0.381989, 30.3158 )
z_index = -1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="environment/character 2"]
position = Vector2( 102.123, 169.323 )
shape = SubResource( 46 )

[node name="character 3" type="Area2D" parent="environment"]
position = Vector2( 17.9336, -5.034 )
script = ExtResource( 22 )

[node name="character 3" type="AnimatedSprite" parent="environment/character 3"]
material = SubResource( 44 )
position = Vector2( 277.646, 171.119 )
z_index = 1
frames = SubResource( 41 )
animation = "idle"
playing = true

[node name="shadow" type="Sprite" parent="environment/character 3/character 3"]
position = Vector2( 0.761719, 30.4142 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="environment/character 3"]
position = Vector2( 278.589, 173.027 )
shape = SubResource( 47 )

[connection signal="input_event" from="environment/character 1" to="." method="_on_character_1_input_event"]
[connection signal="mouse_entered" from="environment/character 1" to="." method="_on_character_1_mouse_entered"]
[connection signal="mouse_exited" from="environment/character 1" to="." method="_on_character_1_mouse_exited"]
[connection signal="input_event" from="environment/character 2" to="." method="_on_character_2_input_event"]
[connection signal="mouse_entered" from="environment/character 2" to="." method="_on_character_2_mouse_entered"]
[connection signal="mouse_exited" from="environment/character 2" to="." method="_on_character_2_mouse_exited"]
[connection signal="input_event" from="environment/character 3" to="." method="_on_character_3_input_event"]
[connection signal="mouse_entered" from="environment/character 3" to="." method="_on_character_3_mouse_entered"]
[connection signal="mouse_exited" from="environment/character 3" to="." method="_on_character_3_mouse_exited"]
